--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+clap = { version = "4.5.47", features = ["derive"] }
+dirs = "6.0.0"
+serde = { version = "1.0.219", features = ["derive"] }
+toml = "0.9.5"
